# PSpeed

./: .gitignore  CMakeLists.txt  Configurator.cpp  Configurator.h  LICENSE.txt  Makefile  PJC.cpp  PJC.sln  PJC.vcxproj  PJC.vcxproj.filters  PSpeed  README.md  Word.cpp  Word.h  save.sv  save1.sv  scores.txt  settings.cfg
assets/fonts/LICENSES/: block-mono-credits.txt
assets/words_sets/: words.txt
linux.v1.0.0/: PSpeed  settings.cfg
linux.v1.0.0/assets/fonts/LICENSES/: goorm-sans-OFL.md
src/: Button.cpp  Button.h  Configurator.cpp  Configurator.h  PJC.cpp  Util.h  Word.cpp  Word.h
